--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
 name = "sharemov"
 version = "0.1.0"
-description = "Add your description here"
+description = "P2P Video Call, Chat & Screen Share over WebRTC"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "numpy>=2.4.2",
-    "pandas>=3.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn[standard]>=0.34.0",
+    "python-socketio>=5.12.0",
+    "jinja2>=3.1.0",
 ]
